--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redux [RU]Tutorial</title>
+    <title>Frontend Tutorial</title>
 </head>
 <body>
 <div id="root">
 </div>
-<script src="build/es5/webpack-babel.browser.js"></script>
+<script src="build/es5/frontend.browser.js"></script>
 </body>
 </html>
