--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <div id="root">
 </div>
-<script src="build/es5/frontend.browser.js"></script>
+<script src="build/frontend.bundle.es5.js"></script>
 </body>
 </html>
